--- a/sass/main.scss
+++ b/sass/main.scss
@@ -2,8 +2,11 @@
 // 2. Variables
 // 3. Nesting
 
+$primary-color: #e03821;
+$secondary-color: #2453d4;
 $background-color: #262626;
 $font-primary: "Inter Tight", sans-serif;
+$border-radius: 2rem;
 
 * {
     padding: 0;
@@ -11,54 +14,271 @@ $font-primary: "Inter Tight", sans-serif;
     box-sizing: border-box;
 }
 
+body {}
+
+
+html {
+    overflow-x: hidden;
+    /* font-size: 10px; */
+    scroll-behavior: smooth;
+}
+
 body {
     background-color: $background-color;
+    scroll-behavior: smooth;
+    overflow-x: hidden;
+    height: 100vh;
 }
+
+a {}
+
+// global start here 
+/* global css starts here  */
 
 a {
+    font-size: 1rem;
+    font-family: var(--font-family-secondary);
     text-decoration: none;
     color: white;
-
 }
 
+button,
+.button {
+    /* background-color: var(--color-primary); */
+    color: black;
+    padding: .8rem 1.6rem;
+    border-radius: $border-radius;
+    margin-right: 1rem;
+    margin-top: 1rem;
+    cursor: pointer;
+    transition: all ease-in-out 200ms;
+    font-size: 1rem;
+    font-weight: 500;
+    border: none;
+    min-width: 200px;
+}
+
+.btn-primary {
+    background-color: $secondary-color;
+    color: var(--bg-dark-primary);
+    border: var(--border);
+}
+
+.btn-primary:hover {
+    background-color: $primary-color;
+    border: 1px solid var(--color-primary);
+    color: var(--color-primary);
+}
+
+.btn-secondary {
+    background-color: transparent;
+    color: var(--color-primary);
+    border: 1px solid var(--color-primary);
+}
+
+.btn-secondary:hover {
+    background-color: var(--color-primary);
+    color: var(--bg-dark-primary);
+    border: var(--border);
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: $font-primary;
+    font-weight: 600;
+    color: var(--text-color-white);
+    margin: 0 0 .5rem 0;
+}
+
+h1 {
+    font-size: 3.5rem;
+    line-height: 4.5rem;
+}
+
+h2 {
+    font-size: 2rem;
+    line-height: 3.5rem;
+}
+
+h3 {
+    font-size: 1.4rem;
+    line-height: 3rem;
+}
+
+h4 {
+    font-size: 1.2rem;
+    line-height: 2rem;
+}
+
+p {
+    font-size: 1rem;
+    font-family: $font-primary;
+    line-height: 1.7rem;
+    color: var(--text-color-white);
+    margin: .5rem 0;
+}
+
+// global ends here 
+.first{
+    // position: relative;
+    // height: 100vh;
+}
 /* header starts starts */
-header .container {
-    width: 90%;
-    margin: 1rem auto 0;
-    background-color: background-color;
+header {
+    // position: absolute;
+    top: 0;
+    z-index: 3;
+    padding: .4rem 0;
+    width: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
+    // .container {
+        // width: 90%;
+        // margin: 1rem auto 0; 
+        // background-color: $background-color;
 
-    img {
-        width: 50%;
-    }
 
-    nav {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        gap: 1rem;
-        ul {
+        img {
+            width: 50%;
+        }
+
+        nav {
             display: flex;
-            list-style: none;
-            gap: 1.2rem;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
 
-            li {
-                text-transform: uppercase;
-                font-family: $font-primary;
-                font-weight: 600;
-                font-size: 14px;
+            ul {
+                display: flex;
+                list-style: none;
+                gap: 1.2rem;
+
+                li {
+                    text-transform: uppercase;
+                    font-family: $font-primary;
+                    font-weight: 600;
+                    font-size: 14px;
+                }
+            }
+
+            .social {
+                display: flex;
+                gap: 1.2rem;
+
+                i {
+                    color: white;
+
+                }
             }
         }
-        .social{
-            display: flex;
-            gap: 1.2rem;
-            i{
-                color: white;
+    // }
+}
 
-            } 
+/* header starts ends */
+
+/* hero starts here  */
+.hero {
+    // position: absolute;
+    // left: 0;
+    top: 0;
+    // right: 0;
+    // z-index: 2;
+    background-image: url(../assets/bg-1.jpg);
+    background-size: cover;
+    background-position: top;
+    min-height: 100vh;
+
+
+    // background-color: aqua;
+    .container {
+        width: 90%;
+        margin: 0 auto;
+        // padding: 20rem 0 3rem;
+
+        .row {
+            .column {
+                width: 50%;
+                color: white;
+            }
+        }
+        .spacer{
+            padding:8%  0;
+        }
+    }
+
+}
+
+/* header ends here */
+/* eventUpdate starts here */
+.eventUpdate{
+    background-color: hsl(180, 1%, 17%);
+    background-color: #dbe2e6;
+    .container{
+        width: 90%;
+        margin: 0 auto;
+        padding: 80px 0;
+        .row{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            .column{
+                background-color: rgb(255, 255, 255);
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                padding: .5rem 1rem;
+                img{
+                    width: 20%;
+                    // height: 100px;
+                }
+                .details{
+                    text-align: center;
+
+                    .score{
+                        font-weight: 700;
+                        font-size: 1.5rem;
+                    }
+                    p{
+                        font-size: .9rem;
+                    }
+                }
+
+            }
+            
         }
     }
 }
-    /* header starts ends */
+/* eventUpdate ends here */
+/* blog starts here */
+.blog{
+    background-color: #dbe2e6;
+    background-color: hsl(180, 1%, 17%);
+    .container{
+        width: 90%;
+        margin: 0 auto;
+        padding: 80px 0;
+        .row{
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            gap: 1rem;
+            .column{
+                background-color: rgba(255, 255, 255, 0);
+                display: flex;
+                justify-content: space-between;
+                align-items: center;
+                // padding: .5rem 1rem;
+                img{
+                    width: 100%;
+                }
+            }
+        }
+    }
+}         
+/* blog ends here */
