--- a/sass/main.css
+++ b/sass/main.css
@@ -74,22 +74,25 @@ h6 {
   font-family: "Inter Tight", sans-serif;
   font-weight: 600;
   color: var(--text-color-white);
-  margin: 0 0 0.5rem 0;
+  margin: 0 0 1rem 0;
 }
 
 h1 {
   font-size: 3.5rem;
   line-height: 4.5rem;
+  text-shadow: 2px 2px 2px black;
 }
 
 h2 {
-  font-size: 2rem;
+  font-size: 4rem;
   line-height: 3.5rem;
+  margin: 0rem 0 2rem 0;
 }
 
 h3 {
-  font-size: 1.4rem;
+  font-size: 2rem;
   line-height: 3rem;
+  margin: 1rem 0 1rem 0;
 }
 
 h4 {
@@ -167,7 +170,7 @@ header nav .social i {
 /* header ends here */
 /* eventUpdate starts here */
 .eventUpdate {
-  background-color: hsl(180, 1%, 17%);
+  background-color: hsl(0, 0%, 0%);
   background-color: #dbe2e6;
 }
 .eventUpdate .container {
@@ -207,6 +210,7 @@ header nav .social i {
 .blog {
   background-color: #dbe2e6;
   background-color: hsl(180, 1%, 17%);
+  color: white;
 }
 .blog .container {
   width: 90%;
@@ -225,8 +229,66 @@ header nav .social i {
   justify-content: space-between;
   align-items: center;
 }
+.blog .container .row .column .image {
+  width: 100%;
+  height: 25rem;
+  overflow: hidden;
+  background-color: rgb(220, 29, 29);
+}
 .blog .container .row .column img {
   width: 100%;
 }
 
-/* blog ends here *//*# sourceMappingURL=main.css.map */
+/* blog ends here */
+/* news starts here */
+.news {
+  background-color: #dbe2e6;
+  background-color: hsl(180, 1%, 17%);
+  color: white;
+}
+.news .container {
+  width: 90%;
+  margin: 0 auto;
+  padding: 80px 0;
+}
+.news .container .row {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 1rem;
+}
+.news .container .row .column {
+  background-color: rgba(255, 255, 255, 0);
+  position: relative;
+}
+.news .container .row .column .image {
+  width: 100%;
+  height: 25rem;
+  overflow: hidden;
+  background-color: rgb(220, 29, 29);
+  position: relative;
+}
+.news .container .row .column .image img {
+  -o-object-fit: cover;
+     object-fit: cover;
+  height: 25rem;
+  width: 100%;
+}
+.news .container .row .column .image .overlay {
+  position: absolute;
+  bottom: 0;
+  background: rgb(0, 0, 0);
+  background: rgba(0, 0, 0, 0.4); /* Black see-through */
+  width: 100%;
+  font-size: 20px;
+  padding: 20px;
+  text-align: center;
+  top: 0;
+}
+.news .container .row .column .details {
+  bottom: 0;
+  padding: 0 1rem;
+  position: absolute;
+}
+
+/* news ends here *//*# sourceMappingURL=main.css.map */
